--- a/index.html
+++ b/index.html
@@ -6,193 +6,192 @@
     <title>Form Pembelian</title>
     <style>
         body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f9;
-    color: #333;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center; /* Menjaga konten tetap di tengah horizontal */
-    align-items: flex-start; /* Mengatur konten agar tetap berada di atas */
-    flex-direction: column;
-    height: 100vh;
-    overflow-x: hidden; /* Menghindari scroll horizontal */
-}
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center; /* Menjaga konten tetap di tengah horizontal */
+            align-items: flex-start; /* Mengatur konten agar tetap berada di atas */
+            flex-direction: column;
+            height: 100vh;
+            overflow-x: hidden; /* Menghindari scroll horizontal */
+        }
 
-.header {
-    background-color: #2114d6;
-    color: white;
-    width: 100%;
-    text-align: center;
-    padding: 15px 0;
-    font-size: 32px;
-    font-weight: bold;
-    letter-spacing: 2px;
-    position: fixed; /* Membuat header tetap di atas */
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000; /* Agar header tetap berada di atas konten lainnya */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Bayangan untuk header */
-    /* Menambahkan jarak bawah agar tidak menutupi konten */
-}
+        .header {
+            background-color: #2114d6;
+            color: white;
+            width: 100%;
+            text-align: center;
+            padding: 15px 0;
+            font-size: 32px;
+            font-weight: bold;
+            letter-spacing: 2px;
+            position: fixed; /* Membuat header tetap di atas */
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000; /* Agar header tetap berada di atas konten lainnya */
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Bayangan untuk header */
+        }
 
-.container {
-    background-color: #fff;
-    padding: 30px;
-    width: 100%;
-    max-width: 600px; /* Maksimal lebar kontainer 600px di desktop */
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    box-sizing: border-box;
-    margin-top: 150px; /* Memberikan ruang yang cukup untuk header */
-    margin-left: auto; /* Menjaga agar konten berada di tengah horizontal */
-    margin-right: auto; /* Menjaga agar konten berada di tengah horizontal */
-    position: relative; /* Menjaga container tetap berada di tempat */
-    z-index: 900; /* Pastikan konten berada di bawah header */
-    flex-grow: 1; /* Agar konten container tumbuh secara otomatis */
-    max-height: 80vh; /* Membatasi tinggi maksimal untuk menghindari konten meluap */
-    overflow-y: auto; /* Menambahkan scroll jika konten lebih tinggi dari 80vh */
-}
+        .container {
+            background-color: #fff;
+            padding: 30px;
+            width: 100%;
+            max-width: 600px; /* Maksimal lebar kontainer 600px di desktop */
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
+            margin-top: 5px; /* Memberikan ruang yang cukup untuk header */
+            margin-left: auto; /* Menjaga agar konten berada di tengah horizontal */
+            margin-right: auto; /* Menjaga agar konten berada di tengah horizontal */
+            position: relative; /* Menjaga container tetap berada di tempat */
+            z-index: 900; /* Pastikan konten berada di bawah header */
+            flex-grow: 1; /* Agar konten container tumbuh secara otomatis */
+            max-height: 80vh; /* Membatasi tinggi maksimal untuk menghindari konten meluap */
+            overflow-y: auto; /* Menambahkan scroll jika konten lebih tinggi dari 80vh */
+        }
 
-h1 {
-    text-align: center;
-    color: #2114d6;
-    margin-bottom: 20px;
-}
+        h1 {
+            text-align: center;
+            color: #2114d6;
+            margin-bottom: 20px;
+        }
 
-.section {
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-}
+        .section {
+            margin-bottom: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: stretch;
+        }
 
-label {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 8px;
-    display: block;
-    color: #555;
-}
+        label {
+            font-size: 16px;
+            font-weight: bold;
+            margin-bottom: 8px;
+            display: block;
+            color: #555;
+        }
 
-select, input[type="text"], button {
-    width: 100%;
-    min-width: 200px;
-    padding: 12px;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    font-size: 16px;
-    box-sizing: border-box;
-    margin-top: 8px;
-    display: inline-block;
-}
+        select, input[type="text"], button {
+            width: 100%;
+            min-width: 200px;
+            padding: 12px;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            font-size: 16px;
+            box-sizing: border-box;
+            margin-top: 8px;
+            display: inline-block;
+        }
 
-button {
-    background-color: #2114d6;
-    color: white;
-    font-size: 14px;
-    font-weight: normal;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-top: 10px;
-    width: auto;
-    padding: 6px 15px;
-    border-radius: 20px;
-    text-align: center;
-}
+        button {
+            background-color: #2114d6;
+            color: white;
+            font-size: 14px;
+            font-weight: normal;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+            margin-top: 10px;
+            width: auto;
+            padding: 6px 15px;
+            border-radius: 20px;
+            text-align: center;
+        }
 
-button:hover {
-    background-color: #1b61e2;
-}
+        button:hover {
+            background-color: #29cf00;
+        }
 
-.left-button {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    padding: 6px 15px;
-    font-size: 14px;
-    font-weight: normal;
-    background-color: #2114d6;
-    color: white;
-    border-radius: 20px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-}
+        .left-button {
+            position: absolute;
+            top: 30px;
+            left: 30px;
+            padding: 6px 15px;
+            font-size: 14px;
+            font-weight: normal;
+            background-color: #2114d6;
+            color: white;
+            border-radius: 20px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
 
-.left-button:hover {
-    background-color: #1bd5e2;
-}
+        .left-button:hover {
+            background-color: #1bd5e2;
+        }
 
-.info-text {
-    background-color: #e7f4fe;
-    border: 1px solid #90c9e3;
-    padding: 15px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-radius: 8px;
-    display: none;
-    color: #555;
-}
+        .info-text {
+            background-color: #e7f4fe;
+            border: 1px solid #90c9e3;
+            padding: 15px;
+            margin-top: 10px;
+            margin-bottom: 10px;
+            border-radius: 8px;
+            display: block; /* Deskripsi muncul pertama kali */
+            color: #555;
+        }
 
-.price {
-    font-size: 18px;
-    font-weight: bold;
-    color: #8A2BE2;
-    margin-top: 10px;
-}
+        .price {
+            font-size: 18px;
+            font-weight: bold;
+            color: #8A2BE2;
+            margin-top: 10px;
+        }
 
-.selected-payment {
-    background-color: #4CAF50;
-    color: white;
-}
+        .selected-payment {
+            background-color: #29cf00;
+            color: white;
+        }
 
-#paymentSection ul {
-    list-style: none;
-    padding: 0;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-}
+        #paymentSection ul {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+        }
 
-/* Styling untuk kolom deskripsi produk */
-.product-description-container {
-    background-color: #f9f9f9;
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-    margin-top: 5px;
-    font-size: 14px;
-    color: #555;
-    box-sizing: border-box;
-    max-height: 300px; /* Batasi tinggi untuk deskripsi produk jika diperlukan */
-    overflow-y: auto; /* Tambahkan scroll jika deskripsi terlalu panjang */
-}
+        .product-description-container {
+            background-color: #f9f9f9;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            padding: 15px;
+            margin-top: 5px;
+            font-size: 14px;
+            color: #555;
+            box-sizing: border-box;
+            max-height: 300px; /* Batasi tinggi untuk deskripsi produk jika diperlukan */
+            overflow-y: auto; /* Tambahkan scroll jika deskripsi terlalu panjang */
+            display: none; /* Disembunyikan pada awalnya */
+        }
 
-/* Responsif untuk perangkat mobile */
-@media screen and (max-width: 768px) {
-    body {
-        justify-content: flex-start; /* Menjaga konten dimulai dari atas */
-    }
+        /* Responsif untuk perangkat mobile */
+        @media screen and (max-width: 768px) {
+            body {
+                justify-content: flex-start; /* Menjaga konten dimulai dari atas */
+            }
 
-    .container {
-        padding: 15px; /* Mengurangi padding untuk perangkat kecil */
-        margin-top: 80px; /* Mengurangi margin-top pada perangkat kecil */
-        width: 90%; /* Lebar kontainer 90% pada perangkat kecil */
-    }
+            .container {
+                padding: 15px; /* Mengurangi padding untuk perangkat kecil */
+                margin-top: 80px; /* Mengurangi margin-top pada perangkat kecil */
+                width: 90%; /* Lebar kontainer 90% pada perangkat kecil */
+            }
 
-    .header {
-        font-size: 24px; /* Mengurangi ukuran font header pada mobile */
-        padding: 12px 0;
-    }
+            .header {
+                font-size: 24px; /* Mengurangi ukuran font header pada mobile */
+                padding: 12px 0;
+            }
 
-    .left-button {
-        top: 20px; /* Menyesuaikan posisi tombol kiri pada mobile */
-        left: 15px;
-    }
-}
+            .left-button {
+                top: 20px; /* Menyesuaikan posisi tombol kiri pada mobile */
+                left: 15px;
+            }
+        }
 
-    </style>    
+    </style>
 </head>
 <body>
 
@@ -208,7 +207,7 @@ button:hover {
 
         <!-- Teks yang akan ditampilkan -->
         <div class="info-text" id="infoText">
-            <p>Ini adalah panel web otomatis berikut cara penggunaanya :<br>1. masukkan data ke kolom serta pilih kategori dan produknya<br>2. periksa lagi bahwa data dan produk yang dipilih sudah benar<br>3. klik BELI untuk membeli produk,nanti akan di arahkan ke whatsapp<br>4. setelah di whatsapp,kirim pesan yang sudah disusun otomatis oleh system ke nomor BOT<br>5. tunggu dan pesanan akan di proses<br><br>SEMUA PESANAN DI PROSES SYSTEM 24JAM</p>
+            <p>Ini adalah panel web otomatis berikut cara penggunaannya :<br>1. Masukkan data ke kolom serta pilih kategori dan produknya<br>2. Periksa lagi bahwa data dan produk yang dipilih sudah benar<br>3. Klik BELI untuk membeli produk, nanti akan diarahkan ke WhatsApp<br>4. Setelah di WhatsApp, kirim pesan yang sudah disusun otomatis oleh sistem ke nomor BOT<br>5. Tunggu dan pesanan akan diproses<br><br>SEMUA PESANAN DIPROSES OLEH SISTEM 24 JAM</p>
         </div>
 
         <!-- Kategori Utama -->
@@ -237,34 +236,36 @@ button:hover {
             <select id="product" disabled>
                 <option value="">-- Pilih Produk --</option>
             </select>
+            <div id="productDescription" class="product-description-container"></div>
+            <div id="productPrice" class="price"></div>
         </div>
-
-        <!-- Deskripsi Produk dalam Kolom -->
-        <div class="section">
-            <div class="product-description-container" id="productDescription"></div>
-        </div>
-
-        <!-- Harga Produk -->
-        <div class="section price" id="productPrice"></div>
 
         <!-- Metode Pembayaran -->
-        <div class="section" id="paymentSection" style="display: none;">
-            <label for="payment">Pilih Metode Pembayaran:</label>
+        <div id="paymentSection" style="display: none;">
+            <h3>Pilih Metode Pembayaran:</h3>
             <ul id="paymentList"></ul>
         </div>
 
-        <!-- Nomor Tujuan dan Tombol Beli -->
+        <!-- Input No HP -->
         <div class="section">
-            <label for="phone">Nomor Tujuan:</label>
-            <input type="text" id="phone" placeholder="Masukkan nomor tujuan">
+            <label for="phone">Nomor HP (WA):</label>
+            <input type="text" id="phone" placeholder="Masukkan Nomor HP (WA)">
         </div>
 
-        <div class="section">
-            <button onclick="submitForm()">Beli</button>
-        </div>
+        <!-- Tombol Submit -->
+        <button onclick="submitForm()">Beli Sekarang</button>
     </div>
 
     <script>
+        let isInfoVisible = true;
+
+        // Fungsi untuk toggle informasi tambahan
+        function toggleInfo() {
+            const infoText = document.getElementById('infoText');
+            isInfoVisible = !isInfoVisible;
+            infoText.style.display = isInfoVisible ? 'block' : 'none';
+        }
+
         const products = {
             paket_otp: {
                 subcategories: {
@@ -273,9 +274,9 @@ button:hover {
                             name: 'EDUKASI 1gb',
                             code: 'XED1',
                             paymentMethods: ['pulsa', 'dana', 'gopay'], 
-                            description: '<br>~ paket edukasi 1gb<br>~ sediakan pulsa/E-wallet 1.000<br>asda<br>daf<br>', 
+                            description: '<br>~ paket edukasi 1gb<br>~ sediakan pulsa/E-wallet 1.000', 
                             price: 'Rp 1.000',
-                            subcategoryDescription: 'setelah dor,urusan kita selesai. Cek OTP kamu di https://myxl.nfime.xyz' 
+                            subcategoryDescription: 'setelah dor, urusan kita selesai. Cek OTP kamu di https://myxl.nfime.xyz' 
                         }
                     ]
                 }
@@ -359,9 +360,8 @@ button:hover {
                 if (product) {
                     productPrice.innerHTML = product.price;
                     productDescription.innerHTML = product.description;
+                    productDescription.style.display = 'block';  // Pastikan deskripsi tampil
                     paymentSection.style.display = 'block';
-
-                    // Menampilkan metode pembayaran yang tersedia
                     paymentList.innerHTML = '';
                     product.paymentMethods.forEach(method => {
                         const button = document.createElement('button');
@@ -397,40 +397,40 @@ button:hover {
             const url = `https://wa.me/62${phone}?text=Hai, saya ingin membeli produk ${productCode} dari kategori ${category}, subkategori ${subcategory} menggunakan metode pembayaran ${selectedPaymentMethod}.`;
             window.open(url, '_blank');
         }
-
         // Fungsi untuk toggle informasi tambahan
         function toggleInfo() {
             const infoText = document.getElementById('infoText');
-            infoText.style.display = infoText.style.display === 'none' ? 'block' : 'none';
+            isInfoVisible = !isInfoVisible;
+            infoText.style.display = isInfoVisible ? 'block' : 'none';
         }
 
         // Fungsi untuk menangani tombol beli
-function submitForm() {
-    const category = categorySelect.value;
-    const subcategory = subcategorySelect.value;
-    const productCode = productSelect.value;
-    const phone = document.getElementById('phone').value;
+        function submitForm() {
+            const category = categorySelect.value;
+            const subcategory = subcategorySelect.value;
+            const productCode = productSelect.value;
+            const phone = document.getElementById('phone').value;
 
-    if (!subcategory || !productCode || !phone || !selectedPaymentMethod) {
-        alert('Mohon lengkapi semua informasi.');
-        return;
-    }
+            if (!subcategory || !productCode || !phone || !selectedPaymentMethod) {
+                alert('Mohon lengkapi semua informasi.');
+                return;
+            }
 
-    const selectedProduct = products[category]?.subcategories[subcategory]?.find(product => product.code === productCode);
-    const productName = selectedProduct ? selectedProduct.name : '';
+            const selectedProduct = products[category]?.subcategories[subcategory]?.find(product => product.code === productCode);
+            const productName = selectedProduct ? selectedProduct.name : '';
 
-    let message;
-    if (selectedPaymentMethod !== 'tidak') {
-        message = `${subcategory} ${productCode}.${phone}.${selectedPaymentMethod}`;
-    } else {
-        message = `${subcategory} ${productCode}.${phone}`;
-    }
+            let message;
+            if (selectedPaymentMethod !== 'tidak') {
+                message = `${subcategory} ${productCode}.${phone}.${selectedPaymentMethod}`;
+            } else {
+                message = `${subcategory} ${productCode}.${phone}`;
+            }
 
-    const phoneNumber = '6287717272676'; // Nomor WhatsApp tujuan
-    const whatsappURL = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
+            const phoneNumber = '6287717272676'; // Nomor WhatsApp tujuan
+            const whatsappURL = `https://wa.me/${phoneNumber}?text=${encodeURIComponent(message)}`;
 
-    window.open(whatsappURL, '_blank');
-}
+            window.open(whatsappURL, '_blank');
+        }
 
     </script>
 </body>
