--- a/index.html
+++ b/index.html
@@ -276,13 +276,179 @@
                             paymentMethods: ['pulsa', 'dana', 'gopay'], 
                             description: '<br>~ paket edukasi 1gb<br>~ sediakan pulsa/E-wallet 1.000', 
                             price: 'Rp 1.000',
-                            subcategoryDescription: 'setelah dor, urusan kita selesai. Cek OTP kamu di https://myxl.nfime.xyz' 
+                            subcategoryDescription: 'setelah dor,urusan kita selesai. Cek OTP kamu di https://myxl.nfime.xyz' 
+                        },
+                        { 
+                            name: 'Unlock anggota tambahan Akrab', 
+                            code: 'XAA1',
+                            price: 'Rp 0', 
+                            paymentMethods: ['pulsa'], 
+                            description: '<br>~ Unlock Anggota tambahan akrab<br>~ Sediakan pulsa 20.000' 
+                        },
+                        { 
+                            name: 'Pengelola Akrab S', 
+                            code: 'PS40',
+                            price: 'Rp 10.000', 
+                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
+                            description: '<br>~ Pengelola akrab S<br>~ Sediakan pulsa/e-wallet 34.000' 
+                        },
+                        { 
+                            name: 'Pengelola Akrab L',
+                            code: 'PL40', 
+                            price: 'Rp 12.000', 
+                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
+                            description: '<br>~ Pengelola akrab L<br>~ beli di jam tengah malam agar mendapat reward (ga ada jaminan)<br>~ Sediakan pulsa/e-wallet 108.000' 
+                        },
+                        { 
+                            name: 'Pengelola Akrab XL', 
+                            code: 'PXL40',
+                            price: 'Rp 15.000', 
+                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
+                            description: '<br>~ Pengelola akrab XL<br>~ beli di jam tengah malam agar mendapat reward (ga ada jaminan)<br>~ Sediakan pulsa/e-wallet 168.000' 
+                        },
+                        { 
+                            name: 'Pengelola Akrab XXL', 
+                            code: 'PXXL40',
+                            price: 'Rp 15.000', 
+                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
+                            description: '<br>~ Pengelola akrab XXL<br>~ beli di jam tengah malam agar mendapat reward (ga ada jaminan)<br>~ Sediakan pulsa/e-wallet 270.000' 
+                        },
+                        { 
+                            name: 'Masa Aktif XL 1 tahun', 
+                            code: 'XMS1TH',
+                            price: 'Rp 15.000', 
+                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
+                            description: '<br>~ masa aktif selama 12bulan<br>~ masa aktif akan di perpanjang otomatis tiap bulan tidak langsunh 1 tahun<br>~ pilih metode dana,tapi tidak memotong saldo dana' 
+                        }
+                
+                    ]
+                }
+            },
+            paket_nonotp: {
+                subcategories: {
+                    orderfast: [
+                        { 
+                            name: 'Akrab BIG SUPER',
+                            code: 'XLBIGSUPER',
+                            paymentMethods: ['tidak'], 
+                            description: '<br>Area 1 = 30-32GB<br>Area 2 = 35-37GB<br>Area 3 = 48-50GB<br>Area 4 = 88-90GB<br>~ tidak ada refund, jika salah nomro atau apa (tolong teliti)<br>~ jika serasa nomor mempunyai bug 2 pengelola, JANGAN ORDER<br>~ GARANSI 20HARI<br>~ jika terkena kick pengelola lama.. Tidak Ada REINVITE',
+                            price: 'Rp 57.000',
+                            subcategoryDescription: 'PAKET NON OTP, KUOTA LANGSUNG MASUK<br>BISA UNTUK XL/AXIS' 
+                        },
+                        { 
+                            name: 'Akrab XL NO REW (MINI)',
+                            code: 'XLMINI',
+                            paymentMethods: ['tidak'], 
+                            description: '<br>Area 1 = 21.5 GB<br>Area 2 = 25.5 GB<br>Area 3 = 35 GB<br>Area 4 = 59 GB<br>~ jika masih ada Akrab,unreg dulu via myxl<br>~ GARANSI 30HARI<br>~ jika terkena kick pengelola lama..orderkan lagi dengan produk bernama REINVITE',
+                            price: 'Rp 56.000'
+                        },
+                        { 
+                            name: 'Akrab XL REW (BIG)',
+                            code: 'XLBIG',
+                            paymentMethods: ['tidak'], 
+                            description: '<br>Area 1 = 33 GB<br>Area 2 = 35 GB<br>Area 3 = 47 GB<br>Area 4 = 73 GB<br>~ Jka bonus myRewards tidak masuk.. silahkan ajukan komplen setelah 1 x 24 jam.. untuk menghindari delay myXL<br>~ jika bonus myRewards tidak masuk.. akan di refund RP 5.000<br>~ jika masih ada Akrab,unreg dulu via myxl<br>~ GARANSI 30HARI<br>~ jika terkena kick pengelola lama..orderkan lagi dengan produk bernama REINVITE',
+                            price: 'Rp 59.000'
+                        },
+                        { 
+                            name: 'Akrab XXL REW (JUMBO)',
+                            code: 'XLJUMBO',
+                            paymentMethods: ['tidak'], 
+                            description: '<br>Area 1 = 65 GB<br>Area 2 = 70 GB<br>Area 3 = 83 GB<br>Area 4 = 123 GB<br>~ Jka bonus myRewards tidak masuk.. silahkan ajukan komplen setelah 1 x 24 jam.. untuk menghindari delay myXL<br>~ jika bonus myRewards tidak masuk.. akan di refund RP 5.000<br>~ jika masih ada Akrab,unreg dulu via myxl<br>~ GARANSI 30HARI<br>~ jika terkena kick pengelola lama..orderkan lagi dengan produk bernama REINVITE',
+                            price: 'Rp 80.000'
+                        },
+                        { 
+                            name: 'REINVITE (Big,mini,jumbo)',
+                            code: 'REINVITE',
+                            paymentMethods: ['tidak'], 
+                            description: '<br>Area 1 = 65 GB<br>Area 2 = 70 GB<br>Area 3 = 83 GB<br>Area 4 = 123 GB<br>~ Jka bonus myRewards tidak masuk.. silahkan ajukan komplen setelah 1 x 24 jam.. untuk menghindari delay myXL<br>~ jika bonus myRewards tidak masuk.. akan di refund RP 5.000<br>~ jika masih ada Akrab,unreg dulu via myxl<br>~ GARANSI 30HARI<br>~ jika terkena kick pengelola lama..orderkan lagi dengan produk bernama REINVITE',
+                            price: 'Rp 0'
+                        },
+                        { 
+                            name: 'Akrab Orderan Fake',
+                            code: 'TESAKRAB',
+                            paymentMethods: ['tidak'], 
+                            description: 'JANGAN DI ORDER',
+                            price: 'Rp 1.000'
+                        }
+                    ],
+                    ordercuan2: [
+                        { 
+                            name: 'Akrab LITE',
+                            code: 'PAKET3',
+                            paymentMethods: ['pulsa'], 
+                            description: '<br>Area 1 = 37GB<br>Area 2 = 42GB<br>Area 3 = 55GB<br>Area 4 = 95GB<br>~ Di Proses Otomatis oleh sistem<br>~ Masa aktif random 28 - 30 hari<br>~ Garansi 7 Hari untuk Paket ini<br>~ Garansi berlaku jika tidak ada BUG pengelola lama<br>~ Tidak ada invite ulang ketika terkena BUG pengelola lama & Kesalahan Nomer<br>~ Unreg Akrab wajib MyXL',
+                            price: 'Rp 55.000'
+                        },
+                        { 
+                            name: 'Akrab PLUS',
+                            code: 'PAKET4',
+                            paymentMethods: ['pulsa'], 
+                            description: '<br>Area 1 = 38GB<br>Area 2 = 44GB<br>Area 3 = 60GB<br>Area 4 = 103GB<br>~ Di Proses Otomatis oleh sistem<br>~ Masa aktif random 28 - 30 hari<br>~ Garansi 5 Hari untuk Paket ini<br>~ Garansi berlaku jika tidak ada BUG pengelola lama<br>~ Tidak ada invite ulang ketika terkena BUG pengelola lama & Kesalahan Nomer<br>~ Unreg Akrab wajib MyXL',
+                            price: 'Rp 56.000'
+                        }
+                    ]
+                }
+            },
+            paket_inject: {
+                subcategories: {
+                    ordercuan: [
+                        { 
+                            name: 'Xtra Combo Special', 
+                            code: 'PAKET1',
+                            price: 'Rp 5.000', 
+                            paymentMethods: ['dana', 'gopay'], 
+                            description: '<br>~ Untuk syarat Xtra Unlimited Turbo<br>~ Kuota up to 8GB tergantung Hoki<br>~ memotong e-wallet 16.850',
+                            subcategoryDescription: 'setelah dor,urusan kita selesai. Cek OTP kamu di https://hijaubiru.my.id' 
+                        },
+                        { 
+                            name: 'Unlimited Turbo Premium', 
+                            code: 'PAKET2',
+                            price: 'Rp 2.000', 
+                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
+                            description: '<br>~ WhatsApp,Line,Gojek,YouTube,Instagram,Facebook<br>~ Perkiraan Fup 90-100GB<br>~ memotong e-wallet/pulsa 13.500' 
+                        },
+                        { 
+                            name: 'Unlimited Turbo Super', 
+                            code: 'PAKET3',
+                            price: 'Rp 2.000', 
+                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
+                            description: '<br>~ WhatsApp,Line,Gojek,Instagram,Facebook<br>~ Perkiraan Fup 50-75GB<br>~ memotong e-wallet/pulsa 8.500' 
+                        },
+                        { 
+                            name: 'Unlimited Turbo Standart', 
+                            code: 'PAKET4',
+                            price: 'Rp 1.000', 
+                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
+                            description: '<br>~ WhatsApp,Line,Gojek,Facebook<br>~ Perkiraan Fup 40-50GB<br>~ memotong e-wallet/pulsa 3.000' 
+                        },
+                        { 
+                            name: 'Unlimited Turbo Basic', 
+                            code: 'PAKET5',
+                            price: 'Rp 1.000', 
+                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
+                            description: '<br>~ WhatsApp,Line,Gojek<br>~ Perkiraan Fup 20-30GB<br>~ memotong e-wallet/pulsa 500' 
+                        },
+                        { 
+                            name: 'Unlimited Turbo Video', 
+                            code: 'PAKET12',
+                            price: 'Rp 1.000', 
+                            paymentMethods: ['pulsa', 'dana', 'gopay'], 
+                            description: '<br>~ WhatsApp,Line,Gojek<br>~ Perkiraan Fup 100-200GB<br>~ memotong e-wallet/pulsa 25.000' 
+                        }
+                    ],
+                    orderkm: [
+                        { 
+                            name: '[Method Dana] Unlimited Turbo Super', 
+                            code: 'XLUNLITURBOHSUPER7H',
+                            price: 'Rp 1.000', 
+                            paymentMethods: ['tidak'], 
+                            description: '<br>~ Xtra Unlimited Turbo Super untuk akses LINE, Gojek, Facebook, dan Instagram secara Unlimited dengan Kuota WhatsApp Harian 50MB/hari<br>~ Dapat dipakai untuk Inject SSH/VPN (bagi yang tau-tau saja)<br>~ Sediakan saldo E-wallet Dana Rp8.500 (Akan terpotong segini)',
+                            subcategoryDescription: 'setelah dor,urusan kita selesai. Cek OTP kamu di https://hijaubiru.my.id' 
                         }
                     ]
                 }
             }
         };
-
         const categorySelect = document.getElementById('category');
         const subcategorySelect = document.getElementById('subcategory');
         const productSelect = document.getElementById('product');
